@@ -5,6 +5,7 @@ Version 6.0.0-RC.5
 ======================================================================================================================
 AllOverIt
   * Added AwaitableLock to complement ReadWriteLock for async scenarios (although it does not support re-entrant)
+  * Deleted GetGenericArguments() - same as type.GenericTypeArguments
 
 AllOverIt.Filtering
   * Renamed IgnoreNullFilterValues to IgnoreDefaultFilterValues so default constructed In and NotIn objects are
